# ChangeLog for net-www/netscape-flash
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-www/netscape-flash/ChangeLog,v 1.67 2008/05/15 14:35:11 lack Exp $

*netscape-flash-10_beta20080515 (15 May 2008)

  15 May 2008; Jim Ramsay <lack@gentoo.org>
  +netscape-flash-10_beta20080515.ebuild:
  New beta version of FlashPlayer-10 is released (Bug #222231)

  17 Apr 2008; Markus Meier <maekke@gentoo.org>
  netscape-flash-9.0.124.0.ebuild:
  x86 stable, security bug #204344

  15 Apr 2008; Jim Ramsay <lack@gentoo.org> -netscape-flash-9.0.48.0.ebuild,
  -netscape-flash-9.0.48.0-r1.ebuild:
  Removing old (and broken ala bug #217799) versions

  15 Apr 2008; Jim Ramsay <lack@gentoo.org> netscape-flash-9.0.124.0.ebuild:
  Stable on amd64 as per security #204344

*netscape-flash-9.0.124.0 (09 Apr 2008)

  09 Apr 2008; Jim Ramsay <lack@gentoo.org>
  +netscape-flash-9.0.124.0.ebuild:
  New version released with security fixes (Bug 204344)

  17 Jan 2008; Jim Ramsay <lack@gentoo.org>
  -netscape-flash-9.0.60.0_beta082207.ebuild,
  -netscape-flash-9.0.60.0_beta100107.ebuild:
  Upstream source no longer available for these beta versions (Bug #206210)

  01 Jan 2008; Raúl Porcel <armin76@gentoo.org>
  netscape-flash-9.0.115.0.ebuild:
  x86 stable wrt security #193519

  30 Dec 2007; Richard Freeman <rich0@gentoo.org>
  netscape-flash-9.0.115.0.ebuild:
  amd64 stable - #193519

*netscape-flash-9.0.115.0 (04 Dec 2007)

  04 Dec 2007; Jim Ramsay <lack@gentoo.org>
  +netscape-flash-9.0.115.0.ebuild:
  New version released (bug 201231)

*netscape-flash-9.0.60.0_beta100107 (02 Oct 2007)

  02 Oct 2007; Jim Ramsay <lack@gentoo.org>
  +netscape-flash-9.0.60.0_beta100107.ebuild:
  New beta version released (Bug 194427)

  06 Sep 2007; Jeroen Roovers <jer@gentoo.org>
  netscape-flash-9.0.60.0_beta082207.ebuild:
  Fix HOMEPAGE for the new beta version.

*netscape-flash-9.0.60.0_beta082207 (05 Sep 2007)
