@@ -1,6 +1,11 @@
 # ChangeLog for net-www/netscape-flash
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-www/netscape-flash/ChangeLog,v 1.67 2008/05/15 14:35:11 lack Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/netscape-flash/ChangeLog,v 1.68 2008/06/17 12:47:45 nelchael Exp $
+
+  17 Jun 2008; Krzysiek Pawlik <nelchael@gentoo.org>
+  netscape-flash-7.0.68.ebuild, netscape-flash-9.0.115.0.ebuild,
+  netscape-flash-9.0.124.0.ebuild, netscape-flash-10_beta20080515.ebuild:
+  Add missing media-fonts/corefonts to DEPEND, see bug #227217.
 
 *netscape-flash-10_beta20080515 (15 May 2008)
 
